# omnidirectional_four-wheeled_robot

./: .gitattributes  CMakeLists.txt  Dockerfile  README.md  docker-entrypoint.sh  package.xml
.github/workflows/: ci.yml
config/: robot.rviz
include/omnidirectional_four_wheeled_robot/: robot_geometry.hpp
launch/: gazebo.launch.py
ros2/omnidirectional_four_wheeled_robot/: README.md
ros2/omnidirectional_four_wheeled_robot/launch/: gazebo.launch.py
scripts/: docker_build_and_test.ps1  docker_build_and_test.sh  docker_run_gui.sh  smoke_test.sh
src/: controller_kinematics.cpp  odometry_publisher.cpp
